--- a/şahmat.html
+++ b/şahmat.html
@@ -171,6 +171,9 @@
   </header>
  
   <main>
+<h1>Dostunuza və ya bota qarşı oyun<h1>
+    <iframe src="https://chess-45a81.web.app/#" width="100%" height="800" frameborder="0"></iframe>
+
     <h1>Maqalux Şahmat TV<h1>
       <iframe src="https://lichess.org/embed/broadcast/fide-world-cup-2025/pYWxUzLr" style="width: 100%; aspect-ratio: 4/3;" frameborder="0"></iframe>
       <iframe src="https://lichess.org/tv/frame?theme=brown&bg=dark" style="width: 400px; aspect-ratio: 10/11;" allowtransparency="true" frameborder="0"></iframe>
