Update image URLs for team members

--- a/haqqimizda.html
+++ b/haqqimizda.html
@@ -200,13 +200,13 @@
 
     <div class="team">
       <div class="member">
-        <img src="https://i.imgur.com/dummy1.png" alt="Məhəmməd Əliyev">
+        <img src="https://maqalux.github.io/i.imgur.com/dummy1.png" alt="Məhəmməd Əliyev">
         <h3>Məhəmməd Əliyev</h3>
         <p>Saytın rəhbəri</p>
       </div>
 
       <div class="member">
-        <img src="https://i.imgur.com/dummy2.png" alt="Əliqoşqar Kərimli">
+        <img src="https://maqalux.github.io/i.imgur.com/i.imgur.comdummy2.png" alt="Əliqoşqar Kərimli">
         <h3>Əliqoşqar Kərimli</h3>
         <p>Aligoshgar.github.io saytının rəhbəri</p>
       </div>
