Add logo link to header in xeberler.html

--- a/xeberler.html
+++ b/xeberler.html
@@ -254,7 +254,9 @@
 </head>
 <body>
   <header>
+    <a href="index.html">
     <img src="https://maqalux.github.io/Picsart_25-10-28_10-01-29-931.png" alt="Maqalux loqo">
+    </a>
     <nav>
       <ul>
         <li><a href="index.html">Ana səhifə</a></li>
