--- a/xeberler.html
+++ b/xeberler.html
@@ -231,29 +231,59 @@
       nav ul li a { width: 100%; text-align: center; }
       header { flex-direction: column; gap: 10px; }
     }
-    /* --- Başlıq üçün standart ölçü CSS kodları --- */
+    /* === Header Ölçülərinin Sabitlənməsi === */
 header {
-  min-height: 90px; /* hər iki səhifədə eyni hündürlük */
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: nowrap;
+  height: 90px; /* sabit hündürlük */
+  padding: 0 30px;
   box-sizing: border-box;
-  padding: 15px 30px; /* sabit daxili boşluq */
+}
+
+header a.logo {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  height: 100%;
 }
 
 header a.logo img {
-  height: 55px; /* loqo ölçüsünü eyni saxla */
+  height: 55px;
   width: auto;
+  object-fit: contain;
   display: block;
+  margin: auto 0;
 }
 
+/* Naviqasiya elementlərinin hizalanması */
 nav ul {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  gap: 10px;
   margin: 0;
   padding: 0;
-  display: flex;
-  align-items: center;
 }
 
 nav ul li a {
-  line-height: 1; /* yazı hündürlüyü sabit olsun */
+  font-size: 16px;
+  padding: 10px 18px;
+  line-height: 1;
+  border-radius: 30px;
 }
+
+/* Mobil üçün ölçü uyğunluğu */
+@media (max-width: 700px) {
+  header {
+    height: auto;
+    flex-direction: column;
+    gap: 10px;
+    padding: 15px 20px;
+  }
+}
+
   </style>
 </head>
 
