--- a/index.html
+++ b/index.html
@@ -150,6 +150,59 @@
       nav ul li a { width: 100%; text-align: center; }
       header { flex-direction: column; gap: 10px; }
     }
+    /* === Header Ölçülərinin Sabitlənməsi === */
+header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: nowrap;
+  height: 90px; /* sabit hündürlük */
+  padding: 0 30px;
+  box-sizing: border-box;
+}
+
+header a.logo {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  height: 100%;
+}
+
+header a.logo img {
+  height: 55px;
+  width: auto;
+  object-fit: contain;
+  display: block;
+  margin: auto 0;
+}
+
+/* Naviqasiya elementlərinin hizalanması */
+nav ul {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  gap: 10px;
+  margin: 0;
+  padding: 0;
+}
+
+nav ul li a {
+  font-size: 16px;
+  padding: 10px 18px;
+  line-height: 1;
+  border-radius: 30px;
+}
+
+/* Mobil üçün ölçü uyğunluğu */
+@media (max-width: 700px) {
+  header {
+    height: auto;
+    flex-direction: column;
+    gap: 10px;
+    padding: 15px 20px;
+  }
+}
+
   </style>
 </head>
 
